@@ -19,7 +19,8 @@
 (test-equal "" (let ((x "")) (and-let* (x) x)))
 (test-equal "" (let ((x "")) (and-let* (x)  )))
 (test-equal 2 (let ((x 1)) (and-let* (x) (+ x 1))))
-(test-equal #f (let ((x #f)) (and-let* (x) (+ x 1))))
+(define xf #f)
+(test-equal #f (and-let* (xf) (+ xf 1)))
 (test-equal 2 (let ((x 1)) (and-let* (((positive? x))) (+ x 1))))
 (test-equal #t (let ((x 1)) (and-let* (((positive? x))) )))
 (test-equal #f (let ((x 0)) (and-let* (((positive? x))) (+ x 1))))
@@ -31,12 +32,12 @@
 (test-equal 2 (let ((x 1)) (and-let* (x ((positive? x))) (+ x 1))))
 (test-equal 2 (let ((x 1)) (and-let* ( ((begin x)) ((positive? x))) (+ x 1))))
 (test-equal #f (let ((x 0)) (and-let* (x ((positive? x))) (+ x 1))))
-(test-equal #f (let ((x #f)) (and-let* (x ((positive? x))) (+ x 1))))
-(test-equal #f (let ((x #f)) (and-let* ( ((begin x)) ((positive? x))) (+ x 1))))
+(test-equal #f (and-let* (xf ((positive? xf))) (+ xf 1)))
+(test-equal #f (and-let* (((begin xf)) ((positive? xf))) (+ xf 1)))
 
 (test-equal #f  (let ((x 1)) (and-let* (x (y (- x 1)) ((positive? y))) (/ x y))))
 (test-equal #f  (let ((x 0)) (and-let* (x (y (- x 1)) ((positive? y))) (/ x y))))
-(test-equal #f  (let ((x #f)) (and-let* (x (y (- x 1)) ((positive? y))) (/ x y))))
+(test-equal #f (and-let* (xf (y (- xf 1)) ((positive? y))) (/ xf y)))
 (test-equal 3/2  (let ((x 3)) (and-let* (x (y (- x 1)) ((positive? y))) (/ x y))))
 
 (test-end)
